--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<HTML>
+  <HEAD>
+    <TITLE>projeto soma</TITLE>
+    <LINK REL = "stylesheet" type = "text/CSS" HREF = "style.CSS/>
+      <SCRIPT TYPE = "text/javascript" SRC = "script.js"></SCRIPT>
+  </HEAD>
+  <BODY>
+    <h1>10+15=</h1>
+    <INPUT TYPE = "button" ONCLICK = "mostra resultado()" VALUE = "calcular" ID = "botão"/>
+  </BODY>
+</HTML>
